tests/error/template_class_no_type.gw
// [contains] you must provide template types
template<{A}>
class C {
  A a;
}

C c;
